@@ -13,6 +13,7 @@ on other distributions:
 
 - python3
 - python3-gi
+- python3-keyring
 
 In addition you'll need to install a database driver for
 each database management system you'd like to connect to:
