@@ -3,6 +3,7 @@ Development Version
 
 * Format SQL statement at cursor (Alt+F).
 * Jump to next/previous statement (Alt+Shift+Down, Alt+Shift+Up).
+* Passwords are now saved in keyring.
 
 
 Version 0.1.0 (2015-01-31)
